--- a/Info.plist
+++ b/Info.plist
@@ -7,9 +7,9 @@
 	<key>CFBundleExecutable</key>
 	<string>UnixScriptServer</string>
 	<key>CFBundleGetInfoString</key>
-	<string>1.2.2 copyright 2005, Tetsuro KURITA</string>
+	<string>1.2.3 copyright 2005-2006, Tetsuro KURITA</string>
 	<key>CFBundleHelpBookFolder</key>
-	<string>UnixScriptServer Help</string>
+	<string>UnixScriptServerHelp</string>
 	<key>CFBundleHelpBookName</key>
 	<string>UnixScriptTools for mi ヘルプ</string>
 	<key>CFBundleIconFile</key>
@@ -25,7 +25,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.2.2</string>
+	<string>1.2.3</string>
 	<key>LSUIElement</key>
 	<string>1</string>
 	<key>NSAppleScriptEnabled</key>
