--- a/FactorySettings.plist
+++ b/FactorySettings.plist
@@ -14,6 +14,8 @@
 		<integer>0</integer>
 		<integer>0</integer>
 	</array>
+	<key>CleanCommands</key>
+	<string>sh;gnuplot;gnuplotx;octave;octave-2.1.71</string>
 	<key>CursorColor</key>
 	<array>
 		<integer>21823</integer>
@@ -23,7 +25,7 @@
 	<key>CustomTitle</key>
 	<string>* UnixScript Console *</string>
 	<key>ExecutionString</key>
-	<string>export PROMPT_COMMAND='echo -ne "\033]0;* UnixScript Console *\007"'</string>
+	<string>unset PROMPT_COMMAND</string>
 	<key>IsChangeBackground</key>
 	<true/>
 	<key>IsChangeBoldText</key>
@@ -58,5 +60,9 @@
 	<string>No</string>
 	<key>UseLoginShell</key>
 	<false/>
+	<key>backslash</key>
+	<string>\</string>
+	<key>yenmark</key>
+	<string>¥</string>
 </dict>
 </plist>
