--- a/FactorySettings.plist
+++ b/FactorySettings.plist
@@ -15,7 +15,7 @@
 		<integer>0</integer>
 	</array>
 	<key>CleanCommands</key>
-	<string>sh;gnuplot;gnuplotx;octave;octave-2.1.71</string>
+	<string>sh;gnuplot;gnuplotx;gnuplot_x11;octave;octave-2.1.71</string>
 	<key>CursorColor</key>
 	<array>
 		<integer>21823</integer>
@@ -24,15 +24,6 @@
 	</array>
 	<key>CustomTitle</key>
 	<string>* UnixScript Console *</string>
-	<key>DefaultCommands</key>
-	<dict>
-		<key>Octave</key>
-		<string>octave</string>
-		<key>Perl</key>
-		<string>perl</string>
-		<key>gnuplot</key>
-		<string>gnuplot</string>
-	</dict>
 	<key>ExecutionString</key>
 	<string>unset PROMPT_COMMAND</string>
 	<key>IsChangeBackground</key>
@@ -57,9 +48,9 @@
 		</dict>
 		<dict>
 			<key>command</key>
-			<string>Perl</string>
-			<key>mode</key>
 			<string>perl -w</string>
+			<key>mode</key>
+			<string>Perl</string>
 			<key>prompt</key>
 			<string></string>
 		</dict>
