[UnixScriptServer] append shared DonationReminder. fix the problem that the donation button does not work.

--- a/FactorySettings.plist
+++ b/FactorySettings.plist
@@ -24,6 +24,8 @@
 	</array>
 	<key>CustomTitle</key>
 	<string>* UnixScript Console *</string>
+	<key>DonationURL</key>
+	<string>http://homepage.mac.com/tkurita/scriptfactory/donationproxy.html</string>
 	<key>ExecutionString</key>
 	<string>unset PROMPT_COMMAND</string>
 	<key>IsChangeBackground</key>
