--- a/FactorySettings.plist
+++ b/FactorySettings.plist
@@ -54,7 +54,7 @@
 			<key>mode</key>
 			<string>Perl</string>
 			<key>prompt</key>
-			<string></string>
+			<string>\s+((DB&lt;\d+&gt;)|(cont:\s+))</string>
 		</dict>
 		<dict>
 			<key>command</key>
