--- a/FactorySettings.plist
+++ b/FactorySettings.plist
@@ -23,7 +23,7 @@
 		<integer>21823</integer>
 	</array>
 	<key>CustomTitle</key>
-	<string>* UnixScript Console *</string>
+	<string>* Inferior Terminal *</string>
 	<key>DonationURL</key>
 	<string>http://homepage.mac.com/tkurita/scriptfactory/donationproxy.html</string>
 	<key>ExecutionString</key>
