--- a/FactorySettings.plist
+++ b/FactorySettings.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>BackgroundColor</key>
@@ -15,7 +15,7 @@
 		<integer>0</integer>
 	</array>
 	<key>CleanCommands</key>
-	<string>sh;gnuplot;gnuplotx;gnuplot_x11;octave;octave-2.1.71</string>
+	<string>sh;gnuplot;gnuplotx;gnuplot_x11;</string>
 	<key>CursorColor</key>
 	<array>
 		<integer>21823</integer>
