--- a/HelpSetup.plist
+++ b/HelpSetup.plist
@@ -5,7 +5,7 @@
 	<key>IsLocalized</key>
 	<false/>
 	<key>ManualFolder</key>
-	<string>/Users/tkurita/Factories/Websites/scriptfactory/web-content/software/mi/UnixScriptToolsFormi/manual/ja</string>
+	<string>/Users/tkurita/Factories/Websites/scriptfactory/web-content/software/mi/UnixScriptToolsFormi/manual/ja.lproj</string>
 	<key>NewLayout</key>
 	<true/>
 </dict>
